k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tailfront
spec:
  type: ClusterIP
  selector:
    app: tailfront
  ports:
    - port: 80
      targetPort: 80
