k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tailfront
  # ЛЮБОЙ из вариантов:
  annotations:
    kubernetes.io/ingress.class: traefik
  # ИЛИ вместо аннотации:
  # ingressClassName: traefik
spec:
  rules:
    - host: tailfront.uibirzhasi.kz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tailfront
                port:
                  number: 80
